# supertux-nspire

./: .gitignore  CREDITS  CodingStyle  INSTALL  README.md  configure  configure.ac
data/: CREDITS.txt  extro-bonus.txt  extro-bonus2.txt  extro.txt  intro.txt
data/images/title/: background.c  background.h  logo.c  logo.h
src/: .gitignore  Makefile.am  badguy.cpp  badguy.h  bitmask.cpp  bitmask.h  collision.cpp  collision.h  configfile.cpp  configfile.h  configure.ac  data_manager.h  defines.h  gameloop.cpp  gameloop.h  gameobjs.cpp  gameobjs.h  globals.cpp  globals.h  high_scores.cpp  high_scores.h  intro.cpp  intro.h  level.cpp  level.h  levels_index.h  lispreader.cpp  lispreader.h  main.cpp  menu.cpp  menu.h  mousecursor.cpp  mousecursor.h  particlesystem.cpp  particlesystem.h  physic.cpp  physic.h  player.cpp  player.h  resources.cpp  (+30 more)
tools/: Makefile  config
tools/resources-maker/: .gitignore  Makefile  build  main.cpp
tools/resources-scanner/: .gitignore  .swo  .swp  Makefile  build  config_file.cpp  config_file.h  copy  main.cpp
