dnl ==========================================================================
dnl
dnl	configure.ac
dnl	Author : CHAUVIN Barnabé   (Choups314)
dnl
dnl	Process this file with autoconf to produce a configure script
dnl
dnl ==========================================================================

AC_PREREQ([2.54])
AC_INIT([SuperTux-nSpire], 0.1)

AC_COPYRIGHT([This project comes from the original game SuperTux.
		To get more information, refer to the README.md file.
		This project is licensed under the GPL license. (c.f. COPYING)
		
		The original author of this adaptation is 
			CHAUVIN Barnabé	(barnabe.chauvin@gmail.com)])

AC_CONFIG_SRCDIR([INSTALL])

dnl ========= Check for programs =============================================

AC_PROG_CC
AC_PROG_CXX
AC_PROG_LN_S

AC_OUTPUT

echo ""
echo "configure ran successful !"
echo "=========================="
echo ""
echo "You can now build the game with :"
echo "	make"
echo ""
